--- a/package.json
+++ b/package.json
@@ -1,24 +1,32 @@
 {
   "name": "kixx",
-  "version": "0.1.1",
+  "version": "1.0.0",
   "description": "The best ECMAScript application develoment framework ever",
-  "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "NODE_ENV=test eslint ./"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kixxauth/kixx.git"
   },
-  "keywords": [
-    "functional",
-    "library",
-    "framework"
-  ],
   "author": "Kris Walker (www.kixx.name)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/kixxauth/kixx/issues"
   },
-  "homepage": "https://github.com/kixxauth/kixx#readme"
+  "homepage": "https://github.com/kixxauth/kixx#readme",
+  "keywords": [
+    "functional",
+    "web",
+    "framework"
+  ],
+  "dependencies": {
+    "bluebird": "3.5.0",
+    "filepath": "1.1.0",
+    "path-to-regexp": "2.0.0",
+    "ramda": "0.24.1"
+  },
+  "devDependencies": {
+    "eslint": "4.6.1"
+  }
 }
