Add JSON body parsing to Request

--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
   ],
   "dependencies": {
     "bluebird": "3.5.0",
+    "boom": "5.2.0",
+    "content-type": "1.0.4",
     "filepath": "1.1.0",
+    "iconv-lite": "0.4.19",
     "path-to-regexp": "2.0.0",
+    "pluralize": "7.0.0",
     "ramda": "0.24.1"
   },
   "devDependencies": {
