Update application store apperatus.
 Changes to be committed:
	modified:   config.js
	modified:   index.js
	modified:   lib/create-application-store.js
	modified:   lib/server-wrapper.js
	modified:   lib/store-middleware/get-object.js
	modified:   lib/store-middleware/set-object.js
	modified:   package-lock.json
	modified:   package.json

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Kris Walker (www.kixx.name)",
   "license": "MIT",
   "dependencies": {
-    "kixx-assert": "1.0.3"
+    "kixx-assert": "1.0.3",
+    "uuid": "^3.1.0"
   },
   "peerDependendencies": {
     "bluebird": "^3.0.0",
