--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "kixx-assert": "1.0.3",
-    "uuid": "^3.1.0"
+    "uuid": "3.1.0"
   },
   "peerDependendencies": {
     "bluebird": "^3.0.0",
