--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "kixx",
-  "version": "0.0.0",
+  "version": "0.3.0",
   "description": "The best ECMAScript application develoment framework ever",
   "main": "index.js",
   "scripts": {
-    "test": "npm run lint",
-    "lint": "NODE_ENV=test eslint ./"
+    "test": "eslint ./",
+    "lint": "eslint ./"
   },
   "author": "Kris Walker (www.kixx.name)",
   "license": "MIT",
