--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
   },
   "author": "Kris Walker (www.kixx.name)",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kixxauth/kixx.git"
+  },
+  "bugs": {
+    "url": "https://github.com/kixxauth/kixx/issues"
+  },
+  "homepage": "https://github.com/kixxauth/kixx#readme",
   "dependencies": {
     "kixx-assert": "1.0.3",
     "uuid": "3.1.0"
