--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/kixxauth/kixx#readme",
   "dependencies": {
+    "jsonwebtoken": "8.1.0",
     "kixx-assert": "1.0.3",
     "uuid": "3.1.0"
   },
