Fix bugs and add tests for computeObjectHash()
 Changes to be committed:
	modified:   .eslintrc.js
	modified:   lib/compute-object-hash.js
	modified:   package-lock.json
	modified:   package.json
	new file:   test/lib/compute-object-hash-test.js

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The best ECMAScript application develoment framework ever",
   "main": "index.js",
   "scripts": {
-    "test": "eslint ./",
+    "test": "eslint ./ && kixx-test-node",
     "lint": "eslint ./"
   },
   "author": "Kris Walker (www.kixx.name)",
@@ -29,6 +29,7 @@
   "devDependencies": {
     "bluebird": "^3.0.0",
     "eslint": "4.14.0",
+    "kixx-test-node": "1.2.5",
     "ramda": "^0.25.0"
   }
 }
