New authentication middleware
 Changes to be committed:
	modified:   .eslintrc.yml
	modified:   index.js
	deleted:    lib/express-middleware/authenticate-scope.js
	deleted:    lib/express-middleware/authenticate-user.js
	new file:   lib/express-middleware/authenticate.js

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -17,6 +17,11 @@ rules:
   semi:
     - error
     - always
+  quotes:
+    - error
+    - single
+    -
+      allowTemplateLiterals: true
   no-multi-spaces:
     - error
   no-var:
