--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kixx",
-  "version": "0.19.1",
+  "version": "0.19.2",
   "description": "The best ECMAScript application develoment framework ever",
   "main": "index.js",
   "scripts": {
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/kixxauth/kixx#readme",
   "dependencies": {
+    "filepath": "1.1.0",
     "jsonwebtoken": "8.1.1",
     "kixx-assert": "1.0.5",
     "uuid": "3.2.1"
