Remove UUID utils
 Changes to be committed:
	modified:   index.js
	modified:   package.json

--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   },
   "homepage": "https://github.com/kixxauth/kixx#readme",
   "dependencies": {
-    "kixx-assert": "1.0.5",
-    "uuid": "3.2.1"
+    "kixx-assert": "1.0.5"
   },
   "peerDependendencies": {
     "bluebird": "^3.0.0",
