--- a/package.json
+++ b/package.json
@@ -21,12 +21,11 @@
     "kixx-assert": "1.0.5"
   },
   "peerDependendencies": {
-    "filepath": "^1.1.0",
     "ramda": "^0.25.0"
   },
   "devDependencies": {
     "eslint": "4.19.1",
-    "filepath": "^1.1.0",
+    "filepath": "1.1.0",
     "kixx-test-node": "1.2.5",
     "ramda": "^0.25.0"
   }
