--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kixx",
-  "version": "0.100.0-pre.2",
+  "version": "1.0.0",
   "description": "The best ECMAScript application develoment framework ever",
   "main": "index.js",
   "scripts": {
