First pass at new Runtime class
 Changes to be committed:
	modified:   .eslintrc.yml
	new file:   index.js
	new file:   lib/runtime.js

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -70,7 +70,7 @@ rules:
     - error
     -
       words: true
-      nonwords: true
+      nonwords: false
   no-multi-spaces:
     - error
   object-curly-spacing:
