--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,16 @@ logs
 *.log
 npm-debug.log*
 
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
 # node-waf configuration
 .lock-wscript
 
-# Compiled binary addons (http://nodejs.org/api/addons.html)
+# Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 
 # Dependency directories
@@ -23,4 +29,3 @@ node_modules/
 
 # Output of 'npm pack'
 *.tgz
-
