Set node engines to >=6.5.0 for ES 2016 support
 Changes to be committed:
	modified:   package.json

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "eslint ./",
     "lint": "eslint ./"
   },
+  "engines": {
+    "node": ">=6.5.0"
+  },
   "author": "Kris Walker (www.kixx.name)",
   "license": "MIT",
   "repository": {
