--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "eslint": "5.14.1",
-    "kixx-test-node": "1.4.0"
+    "kixx-test-node": "1.4.0",
+    "sinon": "7.2.4"
   }
 }
