Started new web server
 Changes to be committed:
	new file:   components/logger/component.mjs
	new file:   components/server/component.mjs
	new file:   components/server/request-handler.mjs
	new file:   components/server/server-utilities.mjs
	new file:   components/server/tls-server.mjs
	new file:   components/server/unencrypted-server.mjs
	new file:   lib/event-bus.mjs
	new file:   lib/events.mjs
	modified:   package.json
	new file:   test/components/logger/logger-component-test.mjs

--- a/package.json
+++ b/package.json
@@ -21,8 +21,13 @@
     "url": "https://github.com/kixxauth/kixx/issues"
   },
   "homepage": "https://github.com/kixxauth/kixx#readme",
+  "dependencies": {
+    "kixx-assert": "~1.1.1",
+    "kixx-logger": "~2.0.0",
+    "kixx-server-errors": "~4.0.2"
+  },
   "devDependencies": {
     "eslint": "~8.33.0",
-    "kixx-test-node": "~1.4.3"
+    "kixx-test-node": "~1.4.4"
   }
 }
