--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "kixx",
   "version": "4.0.0",
   "description": "The best web development framework ever",
-  "main": "index.js",
+  "main": "index.mjs",
   "scripts": {
-    "test": "eslint --ext .mjs ./",
-    "lint": "eslint --ext .mjs ./",
+    "test": "eslint --ext .mjs,.js ./",
+    "lint": "eslint --ext .mjs,.js ./",
     "tests-only": "kixx-test-node"
   },
   "engines": {
@@ -24,7 +24,8 @@
   "dependencies": {
     "kixx-assert": "~1.1.1",
     "kixx-logger": "~2.0.0",
-    "kixx-server-errors": "~4.0.2"
+    "kixx-server-errors": "~4.0.2",
+    "toml": "~3.0.0"
   },
   "devDependencies": {
     "eslint": "~8.33.0",
