--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "kixx-assert": "~1.1.1",
     "kixx-logger": "~2.0.0",
     "kixx-server-errors": "~4.0.2",
+    "path-to-regexp": "^6.2.1",
     "toml": "~3.0.0"
   },
   "devDependencies": {
