--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/kixxauth/kixx#readme",
   "dependencies": {
+    "handlebars": "^4.7.7",
     "kixx-assert": "~1.1.1",
     "kixx-logger": "~2.0.0",
     "kixx-server-errors": "~4.0.2",
