--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
   },
   "homepage": "https://github.com/kixxauth/kixx#readme",
   "dependencies": {
-    "handlebars": "^4.7.7",
+    "handlebars": "~4.7.7",
     "kixx-assert": "~1.1.1",
     "kixx-logger": "~2.0.0",
     "kixx-server-errors": "~4.0.2",
-    "path-to-regexp": "^6.2.1",
-    "toml": "~3.0.0"
+    "path-to-regexp": "~6.2.1",
+    "toml": "~3.0.0",
+    "uuid": "~9.0.0"
   },
   "devDependencies": {
     "eslint": "~8.33.0",
