--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "kixx",
   "version": "4.0.0",
   "description": "The best web development framework ever",
-  "main": "index.mjs",
+  "type": "module",
+  "main": "index.js",
   "scripts": {
     "test": "npm run lint && npm run typecheck",
     "lint": "eslint --ext .mjs,.js,.ts ./framework",
