--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
         "types": ["node"],
         "allowJs": true,
         "noImplicitAny": false,
-        "strictPropertyInitialization": false
+        "strictPropertyInitialization": false,
+        "useUnknownInCatchVariables": false
     },
     "include": ["framework"],
     "exclude": ["node_modules"]
