--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "engines": {
     "node": ">=16.14.2"
   },
+  "files": ["framework/"],
   "author": "Kris Walker (www.kriswalker.me)",
   "license": "MIT",
   "repository": {
