Start of testing.
 Changes to be committed:
	new file:   nodejs/README.md
	new file:   nodejs/assertions/mod.js
	modified:   nodejs/package.json
	new file:   nodejs/test/assertions/assert-falsy.js
	new file:   nodejs/test/assertions/assert.js
	new file:   nodejs/test/assertions/assertions.test.js
	new file:   nodejs/test/assertions/is-equal.js
	new file:   nodejs/test/assertions/is-non-empty-string.js
	new file:   nodejs/test/assertions/is-number.js
	new file:   nodejs/test/assertions/is-string.js

--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -5,8 +5,9 @@
   "type": "module",
   "main": "mod.js",
   "scripts": {
-    "test": "eslint ./",
-    "lint": "eslint ./"
+    "test": "node --test ./test/**/*.test.js",
+    "lint": "eslint ./",
+    "full-test": "eslint ./ && node --test ./test/**/*.test.js"
   },
   "engines": {
     "node": ">=16.20.2"
