New command line interface
 On branch v3
 Changes to be committed:
	new file:   bin/kixx.js
	renamed:    dev-server.js -> cli/dev-server.js
	renamed:    run-command.js -> cli/run-command.js
	renamed:    server.js -> cli/server.js
	modified:   http-server/http-route-spec.js
	modified:   package.json
	modified:   vendor/path-to-regexp/package.json

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "engines": {
     "node": ">=16.13.2"
   },
+  "bin": {
+    "kixx": "bin/kixx.js"
+  },
   "scripts": {
     "test": "eslint ./",
     "lint": "eslint ./"
