Update the package.json files exports
 On branch v3
 Changes to be committed:
	modified:   package.json

--- a/package.json
+++ b/package.json
@@ -19,7 +19,20 @@
     "url": "https://github.com/kixx-platform/kixx.git"
   },
   "files": [
+    "application/",
+    "assertions/",
+    "bin/",
+    "cli/",
+    "datastore/",
+    "errors/",
+    "http-server/",
+    "job-queue/",
     "lib/",
+    "logger/",
+    "request-handlers/",
+    "template-engine/",
+    "view-service/",
+    "vendor/",
     "mod.js"
   ],
   "devDependencies": {
