--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "@eslint/js": "9.27.0",
     "eslint": "9.27.0",
     "kixx-assert": "2.0.1",
-    "kixx-test": "2.1.0"
+    "kixx-test": "2.1.0",
+    "sinon": "21.0.0"
   },
   "keywords": [
     "kixx",
