--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,10 @@ package-lock.json
 # Scratch pad
 tmp/
 
+# Reference application data files
+reference-app/data/
+
+# Reference application secrets
+reference-app/.secrets.json
+
+
