--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "node": ">=16.13.2"
   },
   "bin": {
-    "kixx": "bin/kixx.js"
+    "kixx": "bin/kixx.js",
+    "app": "bin/app.js"
   },
   "scripts": {
     "test": "eslint ./ && node run-tests.js",
