Project template initialization is working
 Changes to be committed:
	modified:   cli/kixx/init-project.js
	new file:   project-template/.gitignore
	new file:   project-template/routes/main.jsonc
	modified:   project-template/virtual-hosts.jsonc

--- a/project-template/virtual-hosts.jsonc
+++ b/project-template/virtual-hosts.jsonc
@@ -7,7 +7,7 @@
         "hostname": "com.example.developers",
         "routes": [
             // The "app:" protocol will resolve to files in your custom routes/ directory.
-            "app://main.json",
+            "app://main.jsonc",
             // Most applications will use the Kixx default routes.
             "kixx://defaults.json"
         ]
