Move executable script names around
 Changes to be committed:
	renamed:    bin/app.js -> bin/kixx-app.js
	renamed:    bin/kixx.js -> bin/kixx-dev.js
	renamed:    cli/app/dev-server.js -> cli/kixx-app/dev.js
	renamed:    cli/app/run-command.js -> cli/kixx-app/run.js
	renamed:    cli/app/server.js -> cli/kixx-app/server.js
	renamed:    cli/kixx/init-project.js -> cli/kixx-dev/init-project.js
	modified:   package.json

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "node": ">=16.13.2"
   },
   "bin": {
-    "kixx": "bin/kixx.js",
-    "app": "bin/app.js"
+    "kixx-dev": "bin/kixx-dev.js",
+    "kixx-app": "bin/kixx-app.js"
   },
   "scripts": {
     "test": "eslint ./ && node run-tests.js",
