Refactor and flatten cli commands
 Changes to be committed:
	deleted:    bin/kixx-dev.js
	renamed:    bin/kixx-app.js -> bin/kixx.js
	renamed:    cli/kixx-app/app-server.js -> cli/app-server.js
	renamed:    cli/kixx-app/dev.js -> cli/dev-server.js
	renamed:    cli/kixx-dev/init-project.js -> cli/init-project.js
	renamed:    cli/kixx-app/run.js -> cli/run-command.js
	modified:   package.json

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "node": ">=16.13.2"
   },
   "bin": {
-    "kixx-dev": "bin/kixx-dev.js",
-    "kixx-app": "bin/kixx-app.js"
+    "kixx": "bin/kixx.js"
   },
   "scripts": {
     "test": "eslint ./ && node run-tests.js",
