Adding tests for binary search utilities
 Changes to be committed:
	modified:   lib/datastore/binary-search.js
	modified:   lib/datastore/datastore-engine.js
	modified:   package.json
	new file:   test/datastore/binary-search.test.js

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "scripts": {
     "test": "eslint ./ && node run-tests.js",
+    "unit-test": "node run-tests.js",
     "lint": "eslint ./"
   },
   "repository": {
