Add error handling pages.
 Changes to be committed:
	modified:   cli/app-server.js
	modified:   lib/error-handlers/error-handler.js
	modified:   lib/request-handlers/page-handler.js
	modified:   lib/view-service/view-service.js
	modified:   project-template/kixx-config.jsonc
	new file:   project-template/pages/404/page.html
	new file:   project-template/pages/error/page.html
	modified:   project-template/pages/page.html
	new file:   project-template/pages/sub-page/page.html
	new file:   project-template/pages/sub-page/page.md

--- a/project-template/kixx-config.jsonc
+++ b/project-template/kixx-config.jsonc
@@ -12,6 +12,9 @@
             },
             "server": {
                 "port": 3000
+            },
+            "errorHandler": {
+                "exposeErrorDetails": true
             }
         },
         "production": {
