--- a/project-template/kixx-config.jsonc
+++ b/project-template/kixx-config.jsonc
@@ -10,10 +10,10 @@
                 "level": "debug",
                 "mode": "console"
             },
-            "server": {
-                "port": 3000
-            },
             "errorHandler": {
+                // Exposing error details will render details about an error
+                // from the error handler which is helpful during debugging
+                // but can be a security risk when exposed in production.
                 "exposeErrorDetails": true
             }
         },
@@ -21,9 +21,6 @@
             "logger": {
                 "level": "info",
                 "mode": "stdout"
-            },
-            "server": {
-                "port": 3001
             }
         }
     }
