--- a/.gitignore
+++ b/.gitignore
@@ -30,13 +30,13 @@ package-lock.json
 # Scratch pad
 tmp/
 
-# Secrets
-.secrets.json
-
 # Reference application data files
 reference-app/data/
 
 # Reference application secrets
 reference-app/.secrets.json
+
+# Claude settings files
+.claude/
 
 
